update(mvn): use latest surefire plugin